--- a/style.css
+++ b/style.css
@@ -19,14 +19,26 @@ a{
     color: black;
 }
 
+.green{
+    color: #27FD92;
+}
+
 /*header*/
+header{
+    position: fixed;
+    width: 100%;
+    top:0px;
+    z-index: 1;
+}
+
 .topbar{
     display: flex;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
-    background-image: url(assets/img/background-header.png);
+    background-image: url(assets/img/background-header.jpg);
     background-size: contain;  
+    background-color: white;
 
 }
 
@@ -56,7 +68,7 @@ nav{
 .item-menu{
     
     
-    width: 20%;
+    width: 25%;
     padding:  20px;
     color: #9A9A9A;
     position:relative;
@@ -104,6 +116,7 @@ nav{
     background-size: cover;
     height: 240px;
     position: relative;
+    margin-top: 168px;
 }
 
 
@@ -175,6 +188,7 @@ h2{
     flex-direction: column;
     justify-content:space-around;
     height: 380px;
+    margin-top: 20px;
     
 }
 
@@ -189,6 +203,11 @@ h2{
 .item-cv.active {
     border-left:3px solid #27FD92;
     
+}
+
+.item-cv.active .skills{
+    display: block;
+
 }
 
 .item-cv.active h3{
@@ -213,8 +232,12 @@ h2{
     display: none;
 }
 
-.skills.active{
-    display: block;
+
+.skills p{
+    margin-left: 10px;
+    display: inline-block;
+    margin-bottom: 5px;
+    
 }
 
 
@@ -268,22 +291,41 @@ h2{
 
 }
 
-.cercle1{
+
+
+.cercles .cercle{
+    animation: loading 1s infinite alternate;
+
+}
+
+.cercles .cercle:nth-of-type(1){
     background-color: #c4c4c4;
+    animation-delay: 0.2s;
 }
 
-.cercle2{
+.cercles .cercle:nth-of-type(2){
     background-color: #9a9a9a;
+    animation-delay: 0.4s;
 }
 
-.cercle3{
+.cercles .cercle:nth-of-type(3){
     background-color: #2f2f2f;
+    animation-delay: 0.6s;
 }
+
+@keyframes loading{
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
 .apropos-contenu button{
     background-color: #FFFFFF;
     border-radius: 10px;
-    border: 1px solid #27FD92;
+    border: 3px solid #27FD92;
     width: 240px;
     height: 50px;
     cursor: pointer;
